...
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/cookbook"
            android:contentDescription="@string/cd_recipe_icon"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toEndOf="@+id/recipe_image"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recipe_image"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toEndOf="@+id/servings_label"
...
